# Weightlifting-Technique-Analyst

./: README.md  app.py  coach.py  hello.py  pyproject.toml
tools/: csvWriter.py  pdfWriter.py  wlAnalysis.py
